testdata/baselines/reference/submodule/conformance/moduleExportAliasUnknown.errors.txt
bug27025.js(1,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
bug27025.js(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
bug27025.js(1,25): error TS2339: Property 'nonprop' does not exist on type 'Window & typeof globalThis'.
bug27025.js(2,9): error TS2339: Property 'foo' does not exist on type 'typeof import("bug27025")'.
bug27025.js(2,15): error TS2304: Cannot find name 'bar'.


==== bug27025.js (5 errors) ====
    module.exports = window.nonprop;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
                            ~~~~~~~
!!! error TS2339: Property 'nonprop' does not exist on type 'Window & typeof globalThis'.
    exports.foo = bar;
            ~~~
!!! error TS2339: Property 'foo' does not exist on type 'typeof import("bug27025")'.
                  ~~~
!!! error TS2304: Cannot find name 'bar'.
    